--- a/packages/pyxis-react/src/stories/foundations/Color/Color.stories.mdx
+++ b/packages/pyxis-react/src/stories/foundations/Color/Color.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from "@storybook/addon-docs";
-import '../pyxis.scss';
 import Overview from './Overview';
+import 'stories/pyxis.scss';
 
-<Meta title="Foundations/Typography" />
+<Meta title="Foundations/Color" />
 
 <Overview />
