--- a/packages/pyxis-react/src/stories/foundations/Typography/Typography.stories.mdx
+++ b/packages/pyxis-react/src/stories/foundations/Typography/Typography.stories.mdx
@@ -1,7 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
-import '../pyxis.scss';
 import Overview from './Overview';
 
-<Meta title="Foundations/Color" />
+<Meta title="Foundations/Typography" />
 
 <Overview />
