[PRIMA-12050]: [Pyxis React] Implementazione del componente Button (#23)

--- a/packages/pyxis-react/src/stories/Introduction.stories.mdx
+++ b/packages/pyxis-react/src/stories/Introduction.stories.mdx
@@ -1,9 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
-
-import Banner from "./assets/banner.png";
+import Introduction from "./Introduction"
 
 <Meta title="Introduction" />
 
-# Welcome to Pyxis
-
-<img src={Banner} alt="banner" />
+<Introduction />
