--- a/packages/pyxis-react/src/stories/components/Button/Overview.stories.mdx
+++ b/packages/pyxis-react/src/stories/components/Button/Overview.stories.mdx
@@ -1,5 +1,5 @@
-import { Meta } from "@storybook/addon-docs";
-import Overview from "./Overview"
+import {Meta} from "@storybook/addon-docs";
+import Overview from "./Overview";
 
 <Meta title="Components/Button/Overview" />
 
