[PRIMA-12254]: [Pyxis Scss] Implement the textarea (#32)

--- a/packages/pyxis-react/src/stories/components/Form/TextField/TextField.stories.mdx
+++ b/packages/pyxis-react/src/stories/components/Form/TextField/TextField.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 import TextField from "./TextField"
 
-<Meta title="Components/TextField" />
+<Meta title="Components/Form/TextField" />
 
 <TextField />
