--- a/packages/pyxis-react/src/stories/components/Badge/Overview.stories.mdx
+++ b/packages/pyxis-react/src/stories/components/Badge/Overview.stories.mdx
@@ -1,6 +1,6 @@
 import {Meta} from "@storybook/addon-docs";
-import Badges from "./Badge";
+import Overview from "./Overview";
 
 <Meta title="Components/Badge 🚧/Overview" />
 
-<Badges />
+<Overview />
