[PRIMA-12315]: [Pyxis Storybook] Documentation for Message component (#62)

--- a/packages/pyxis-react/src/stories/components/Message/Overview.stories.mdx
+++ b/packages/pyxis-react/src/stories/components/Message/Overview.stories.mdx
@@ -1,6 +1,6 @@
 import {Meta} from "@storybook/addon-docs";
-import Messages from "./Message";
+import Overview from "./Overview";
 
 <Meta title="Components/Message 🚧/Overview" />
 
-<Messages />
+<Overview />
