--- a/packages/pyxis-react/src/stories/components/Form/Overview.stories.mdx
+++ b/packages/pyxis-react/src/stories/components/Form/Overview.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 import Overview from "./Overview"
 
-<Meta title="Components/Form Item 🚧/Overview" />
+<Meta title="Components/Form 🚧/Overview" />
 
 <Overview />
