--- a/packages/pyxis-react/src/stories/components/Toggle/Overview.stories.mdx
+++ b/packages/pyxis-react/src/stories/components/Toggle/Overview.stories.mdx
@@ -1,6 +1,6 @@
 import {Meta} from "@storybook/addon-docs";
-import Toggles from "./Toggle";
+import Overview from "./Overview";
 
 <Meta title="Components/Toggle 🚧/Overview" />
 
-<Toggles />
+<Overview />
