--- a/packages/pyxis-react/src/stories/components/Loader/Overview.stories.mdx
+++ b/packages/pyxis-react/src/stories/components/Loader/Overview.stories.mdx
@@ -1,6 +1,6 @@
 import {Meta} from "@storybook/addon-docs";
-import {Loaders} from "./Loader";
+import Overview from "./Overview";
 
 <Meta title="Components/Loader 🚧/Overview" />
 
-<Loaders />
+<Overview />
