--- a/packages/pyxis-react/src/stories/components/Accordion/Overview.stories.mdx
+++ b/packages/pyxis-react/src/stories/components/Accordion/Overview.stories.mdx
@@ -1,6 +1,6 @@
 import {Meta} from "@storybook/addon-docs";
-import {Accordions} from "./Accordion";
+import Overview from "./Overview";
 
 <Meta title="Components/Accordion 🚧/Overview" />
 
-<Accordions />
+<Overview />
