[DS-164]: [Pyxis Storybook] Documentation for TextSwitch (#158)

--- a/packages/pyxis-react/src/stories/components/TextSwitch/Overview.stories.mdx
+++ b/packages/pyxis-react/src/stories/components/TextSwitch/Overview.stories.mdx
@@ -1,6 +1,6 @@
 import {Meta} from "@storybook/addon-docs";
-import TextSwitches from "./TextSwitch";
+import Overview from "./Overview";
 
-<Meta title="Components/Text Switch 🚧/Overview" />
+<Meta title="Components/TextSwitch 🚧/Overview" />
 
-<TextSwitches />
+<Overview />
